# ascii-renderer

./: .gitignore  Pipfile  README.md  TODO.md  autoreload.py  canvas.py  conv.sh  image.py  main.py  playground.py  pyproject.toml  run.py  shaders.py  utils.py
demos/: README.md
models/: cube.py
renderer/: drawer.py  image.py  settings.py  shaders.py  test_3d.py  test_shaders.py  transform.py  utils.py
