[tool.poetry]
name = "ascii-renderer"
version = "0.1.0"
description = ""
authors = ["Bachynin Ivan <bachynin.i@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vanyakosmos/ascii-renderer"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.15"
numba = "^0.41.0"
pillow = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
